@@ -1,15 +1,16 @@
+Build.PL
 Changes
+examples/0.91/create_rss_0.91_full.pl
+examples/0.91/create_rss_0.91.pl
+examples/0.91/fm0.91_full.rdf
+examples/0.91/fm0.91.rdf
+examples/0.91/fm.rdf
+examples/0.91/rss-0.91.dtd
+examples/0.91/xmlnews.rdf
 examples/0.9/create_rss.pl
 examples/0.9/linuxtoday.rdf
 examples/0.9/rss-0.9.dtd
 examples/0.9/slashdot.rdf
-examples/0.91/create_rss_0.91.pl
-examples/0.91/create_rss_0.91_full.pl
-examples/0.91/fm.rdf
-examples/0.91/fm0.91.rdf
-examples/0.91/fm0.91_full.rdf
-examples/0.91/rss-0.91.dtd
-examples/0.91/xmlnews.rdf
 examples/1.0/create_rss_1.0.pl
 examples/1.0/rss1.0.rdf
 examples/1.0/slash.rdf
@@ -19,8 +20,8 @@ examples/create_rss_multiple.pl
 examples/README
 examples/rss2html.pl
 examples/rss_info.pl
-t/data/rss-permalink.xml
 examples/update_rss.pl
+inc/Test/Run/Builder/Manifest.pm
 lib/XML/RSS.pm
 lib/XML/RSS/Private/Output/Base.pm
 lib/XML/RSS/Private/Output/Roles/ImageDims.pm
@@ -32,44 +33,45 @@ lib/XML/RSS/Private/Output/V2_0.pm
 Makefile.PL
 MANIFEST
 README
+t/0.91-parse.t
 t/0.9-generate.t
 t/0.9-parse.t
 t/0.9-strict.t
-t/0.91-parse.t
 t/1.0-generate.t
+t/1.0-parse-2.t
 t/1.0-parse-exotic.t
 t/1.0-parse.t
-t/1.0-parse-2.t
 t/1.0-to-2.0.t
 t/2.0-generate.t
 t/2.0-modules.t
-t/2.0-parse.t
 t/2.0-parse-2.t
+t/2.0-parse.t
 t/2.0-permalink.t
 t/2.0-wo-title.t
 t/add-item-insert-vs-append.t
 t/auto_add_modules.t
 t/charset1.t
-t/data/freshmeat.rdf
-t/data/merlyn1.rss
 t/data/1.0/rss1.0.exotic.rdf
 t/data/1.0/with_content.rdf
 t/data/2.0/sf-hs-with-lastBuildDate.rss
 t/data/2.0/sf-hs-with-pubDate.rss
-t/enclosures.t
+t/data/freshmeat.rdf
+t/data/merlyn1.rss
+t/data/rss-permalink.xml
 t/enclosures2.t
+t/enclosures.t
 t/encode-output.t
 t/encoding.t
+testlib/Test/Run/CmdLine/WithTestManifest.pm
 t/generated/placeholder.txt
 t/guid.t
 t/items-are-0.t
 t/load.t
-t/pod.t
+TODO
 t/pod-coverage.t
+t/pod.t
 t/rss2-gt-encoding.t
 t/test_manifest
 t/version.t
 t/xml-header.t
-testlib/Test/Run/CmdLine/WithTestManifest.pm
-TODO
-MANIFEST
+META.yml
