@@ -11,6 +11,13 @@ push(@extras,
      AUTHOR        => ' Ask Bjoern Hansen <ask@develooper.com>')
     if ($ExtUtils::MakeMaker::Version >= 5.4301);
 
+if ($ExtUtils::MakeMaker::Version >= 6.36)
+{
+    push(@extras,
+        LICENSE => "perl",
+    );
+}
+
 {
     package MY;
 
@@ -50,5 +57,6 @@ WriteMakefile(
                                  'DateTime::Format::W3CDTF' => 0,
                                 },
               'clean'        => { FILES => 'XML-RSS-* t/generated/*.xml' },
+              'PL_FILES' => {},
               @extras
 );
